# gcsg-benchmark

./: pyproject.toml  sandbox_notebook_spec.md
common/: __init__.py  artifacts.py  context_blocks.py  core.py  metrics.py  pools.py  prompts.py  quiz.py  session.py  task_splits.py
common/data/: __init__.py  dataset_state_complete.csv  efghi_dataset_sequence_complete.csv  efghi_environment_spec.json  efghi_task_matrix.json
notebook/: sandbox.ipynb
tasks/ABCD/: build_dataset.py  context_config.json  dataset_sequence_complete.csv  dataset_state_complete.csv  environment_spec.json  task_matrix.json
tasks/EFGHI/: build_dataset.py  dataset_sequence_complete.csv  dataset_state_complete.csv
