[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcsg-common"
version = "0.7.2"
description = "GCSG Benchmark — shared evaluation logic and dataset"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]

[tool.setuptools.package-data]
"common.data" = ["*.csv", "*.json"]
